assets/styles/pages/_projects.scss
.projects {
  @extend .page-wrapper;

  display: flex;

  &__nav {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 10rem;
    &__list-container {
      display: flex;
      flex-direction: column;
      flex-basis: 100%;
      max-width: 100%;
      justify-content: center;
    }

    &__list {
      border-left: 2px solid #ffca8350;
      display: flex;
      flex-direction: column;
      gap: 1rem;
      max-width: 100%;
      position: relative;
      z-index: -1;
      li {
        cursor: pointer;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        padding-left: 1rem;
        padding-top: 0.1rem;
        padding-bottom: 0.1rem;

        &.active-item {
          color: map-get($color-map, primary);
        }
      }

      .list-selected-indicator {
        position: absolute;
        left: -2px;
        top: 0;
        height: 40px;
        width: 2px;
        background-color: map-get($color-map, primary);
        border-radius: 5px;
        transition: 0.2s ease top;
      }
    }

    .archives-button {
      border-bottom: 1px solid map-get($color-map, secondary);
    }
  }

  &__num {
    display: none;
    text-align: center;
  }

  &__main {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow-y: hidden;

    .projects__container {
      display: grid;
      grid-template-columns: 1fr;
      grid-template-rows: 1fr;
      margin: 5rem;

      .projects__image {
        width: 100%;
        grid-area: 1/1/-1/-1;
        filter: grayscale(100%) contrast(1) brightness(40%);
        align-self: center;
        z-index: -1;
      }
      .projects__content {
        grid-area: 1/1/-1/-1;
        background-color: #ffca8330;
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding: 2rem;

        &--title {
          &:hover {
            color: map-get($color-map, primary);
          }
        }

        &--techs {
          display: flex;
          gap: 1rem;
          flex-wrap: wrap;
          span {
            background-color: #ffca8330;
            font-size: 0.8rem;
            border-radius: 3px;
            padding: 0.1rem 0.3rem;
            white-space: nowrap;
          }
        }

        &--actions {
          user-select: none;
          font-size: 2rem;
          a {
            &:hover {
              color: map-get($color-map, primary);
            }
          }
        }
      }
    }
  }
}

@media screen and (max-width: 770px) {
  .projects {
    display: flex;
    flex-direction: column-reverse;
    justify-content: space-evenly;

    &__nav {
      display: none;
    }

    &__num {
      display: block;
    }

    &__main {
      .projects__container {
        margin: 0;
        height: 70%;

        .projects__content {
          justify-content: space-evenly;
          &--title {
            font-size: 1.5rem;
          }
        }
      }

      .projects__image {
        height: 100%;
        overflow: hidden;
        object-fit: cover;
      }
    }
  }
}

